[gd_scene load_steps=21 format=3 uid="uid://cw0bk0h1o70ne"]

[ext_resource type="PackedScene" uid="uid://bbquwaao37aja" path="res://assets/prefabs/characters/actor_ped.tscn" id="2_1nv3g"]
[ext_resource type="Script" uid="uid://bysxpb73lr46b" path="res://addons/FlowAI/scripts/core/FlowAIController.gd" id="2_cv82n"]
[ext_resource type="PackedScene" uid="uid://du7vxqigbaxlm" path="res://assets/prefabs/environments/park_bench/park_bench.tscn" id="3_exg0k"]
[ext_resource type="Texture2D" uid="uid://w45xs277sodg" path="res://assets/textures/grass/aerial_grass_rock_diff_1k.jpg" id="3_t6m7v"]
[ext_resource type="PackedScene" uid="uid://j5nwodo50yh3" path="res://assets/prefabs/characters/actor_player.tscn" id="4_cv82n"]
[ext_resource type="Texture2D" uid="uid://btuu6n8sqevkg" path="res://assets/textures/grass/aerial_grass_rock_nor_gl_1k.jpg" id="4_exg0k"]
[ext_resource type="Script" uid="uid://mk0cs7tsd178" path="res://scripts/core/systems/PedSpawner/PedSpawnerController.gd" id="5_8egd3"]
[ext_resource type="Texture2D" uid="uid://djp16kbej8g3y" path="res://assets/textures/grass/aerial_grass_rock_rough_1k.jpg" id="5_ivgad"]
[ext_resource type="PackedScene" uid="uid://t1k3huao4kgs" path="res://assets/prefabs/environments/road_pack/road_1x_straight.tscn" id="6_alfe8"]
[ext_resource type="PackedScene" uid="uid://c8jl2vxh0ppio" path="res://assets/prefabs/environments/road_pack/road_l_intersection.tscn" id="7_1dh4r"]
[ext_resource type="Texture2D" uid="uid://4pxnh1mqg4f6" path="res://assets/textures/hdri/qwantani_noon_puresky_2k.exr" id="7_72xuw"]
[ext_resource type="Script" uid="uid://c8oqvjek0jr6i" path="res://scripts/core/systems/PedSpawner/PedSpawnerSlot.gd" id="7_alfe8"]
[ext_resource type="Script" uid="uid://c465r45f5mv57" path="res://scripts/gameplay/interface/CrowdAIInterface.gd" id="13_t6m7v"]

[sub_resource type="NavigationMesh" id="NavigationMesh_cv82n"]
vertices = PackedVector3Array(-6.61917, 0.499665, -59.2128, -5.61917, 0.499665, -59.4628, -5.86917, 0.499665, -60.7128, -7.11917, 0.499665, -60.9628, -43.8692, 0.499665, -51.9628, -7.11917, 0.499665, -62.7128, -6.86917, 0.499665, -52.9628, -5.86917, 0.499665, -52.9628, -5.61917, 0.499665, -55.2128, -6.61917, 0.499665, -55.4628, -6.11917, 0.499665, -62.9628, -6.11917, 0.499665, -80.7128, -7.11917, 0.499665, -51.9628, -43.8692, 0.499665, -80.7128, -4.86917, 0.499665, -62.7128, 3.88083, 0.499665, -62.7128, 5.13083, 0.499665, -62.9628, 5.13083, 0.499665, -80.7128, 6.13083, 0.499665, -60.9628, 5.13083, 0.499665, -60.7128, 5.13083, 0.499665, -59.4628, 6.13083, 0.499665, -59.2128, 6.13083, 0.499665, -52.7128, 6.13083, 0.499665, -50.9628, 43.8808, 0.499665, -43.9628, 6.13083, 0.499665, -55.4628, 5.13083, 0.499665, -55.2128, 5.13083, 0.499665, -52.9628, 5.13083, 0.499665, -50.7128, 5.13083, 0.499665, -48.4628, 6.13083, 0.499665, -48.2128, 6.13083, 0.499665, -62.7128, 43.8808, 0.499665, -80.7128, 6.13083, 0.499665, -44.4628, 5.63083, 0.499665, -44.2128, -4.86917, 0.499665, -60.9628, -4.61917, 0.499665, -59.2128, 3.88083, 0.499665, -60.9628, 4.13083, 0.499665, -59.2128, 4.13083, 0.499665, -55.4628, -4.61917, 0.499665, -55.4628, -5.11917, 0.499665, -52.9628, 4.13083, 0.499665, -52.9628, -4.86917, 0.499665, -51.9628, 3.88083, 0.499665, -51.9628, -6.61917, 0.499665, -48.2128, -5.61917, 0.499665, -48.4628, -5.86917, 0.499665, -50.7128, -7.11917, 0.499665, -50.9628, -43.8692, 0.499665, -43.9628, -6.11917, 0.499665, -44.2128, -6.61917, 0.499665, -44.4628, -4.86917, 0.499665, -50.9628, -4.61917, 0.499665, -48.2128, 4.13083, 0.499665, -48.2128, 3.88083, 0.499665, -50.9628, 4.13083, 0.499665, -46.2128, -4.61917, 0.499665, -46.2128, 4.13083, 0.499665, -44.4628, -4.61917, 0.499665, -44.4628, -5.61917, 0.499665, -44.2128, -5.61917, 0.499665, -28.4628, 4.13083, 0.499665, -28.2128, 5.13083, 0.499665, -28.4628, 5.13083, 0.499665, -44.2128, -4.61917, 0.499665, -28.2128, -43.8692, 0.499665, -26.9628, -6.61917, 0.499665, -28.2128, -6.61917, 0.499665, -26.7128, 5.63083, 0.499665, -28.4628, 43.8808, 0.499665, -28.7128, 6.13083, 0.499665, -24.4628, 5.13083, 0.499665, -24.2128, 5.13083, 0.499665, -22.9628, 6.13083, 0.499665, -22.7128, 6.13083, 0.499665, -14.4628, 6.13083, 0.499665, -12.7128, 5.13083, 0.499665, -14.2128, 5.13083, 0.499665, -12.9628, 6.13083, 0.499665, -18.2128, 6.13083, 0.499665, -20.9628, 5.13083, 0.499665, -20.7128, 5.13083, 0.499665, -18.4628, 6.13083, 0.499665, -10.9628, 5.13083, 0.499665, -10.7128, 5.13083, 0.499665, 7.03723, 6.13083, 0.499665, -28.2128, 43.8808, 0.499665, 7.03723, -5.61917, 0.499665, -24.2128, -5.86917, 0.499665, -22.9628, -4.86917, 0.499665, -22.7128, -4.61917, 0.499665, -24.4628, -4.86917, 0.499665, -20.9628, 3.88083, 0.499665, -20.9628, 3.88083, 0.499665, -22.7128, 4.13083, 0.499665, -24.4628, -6.61917, 0.499665, -24.4628, -7.11917, 0.499665, -22.7128, -43.8692, 0.499665, -20.4628, -6.86917, 0.499665, -20.7128, -5.86917, 0.499665, -20.7128, -5.61917, 0.499665, -18.4628, 4.13083, 0.499665, -18.2128, -4.61917, 0.499665, -18.2128, -5.86917, 0.499665, -12.9628, -5.61917, 0.499665, -14.2128, -6.61917, 0.499665, -14.4628, -7.11917, 0.499665, -12.7128, -6.11917, 0.499665, 7.03723, -6.11917, 0.499665, -10.7128, -7.11917, 0.499665, -10.9628, -6.61917, 0.499665, -18.2128, -43.8692, 0.499665, 7.03723, -4.86917, 0.499665, -12.7128, -4.61917, 0.499665, -14.4628, -4.86917, 0.499665, -10.9628, 3.88083, 0.499665, -10.9628, 3.88083, 0.499665, -12.7128, 4.13083, 0.499665, -14.4628)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(5, 3, 4), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(11, 10, 5), PackedInt32Array(6, 12, 9), PackedInt32Array(9, 12, 0), PackedInt32Array(0, 12, 3), PackedInt32Array(3, 12, 4), PackedInt32Array(11, 5, 13), PackedInt32Array(13, 5, 4), PackedInt32Array(14, 10, 15), PackedInt32Array(15, 10, 16), PackedInt32Array(16, 10, 11), PackedInt32Array(16, 11, 17), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 21), PackedInt32Array(24, 23, 22), PackedInt32Array(26, 25, 27), PackedInt32Array(27, 25, 22), PackedInt32Array(22, 25, 24), PackedInt32Array(28, 23, 29), PackedInt32Array(29, 23, 30), PackedInt32Array(30, 23, 24), PackedInt32Array(24, 25, 21), PackedInt32Array(18, 31, 24), PackedInt32Array(24, 31, 32), PackedInt32Array(16, 17, 31), PackedInt32Array(31, 17, 32), PackedInt32Array(24, 34, 33), PackedInt32Array(24, 33, 30), PackedInt32Array(24, 21, 18), PackedInt32Array(2, 35, 1), PackedInt32Array(1, 35, 36), PackedInt32Array(35, 14, 36), PackedInt32Array(36, 14, 37), PackedInt32Array(37, 14, 15), PackedInt32Array(20, 38, 19), PackedInt32Array(19, 38, 37), PackedInt32Array(38, 39, 37), PackedInt32Array(37, 39, 36), PackedInt32Array(36, 39, 40), PackedInt32Array(7, 8, 41), PackedInt32Array(41, 8, 40), PackedInt32Array(27, 42, 26), PackedInt32Array(26, 42, 39), PackedInt32Array(42, 44, 39), PackedInt32Array(39, 44, 40), PackedInt32Array(40, 44, 41), PackedInt32Array(41, 44, 43), PackedInt32Array(46, 45, 47), PackedInt32Array(47, 45, 48), PackedInt32Array(49, 51, 50), PackedInt32Array(45, 51, 48), PackedInt32Array(48, 51, 49), PackedInt32Array(48, 49, 4), PackedInt32Array(4, 12, 48), PackedInt32Array(47, 52, 46), PackedInt32Array(46, 52, 53), PackedInt32Array(29, 54, 28), PackedInt32Array(28, 54, 55), PackedInt32Array(54, 56, 55), PackedInt32Array(55, 56, 53), PackedInt32Array(53, 56, 57), PackedInt32Array(52, 43, 53), PackedInt32Array(53, 43, 55), PackedInt32Array(55, 43, 44), PackedInt32Array(59, 57, 58), PackedInt32Array(58, 57, 56), PackedInt32Array(59, 64, 60), PackedInt32Array(60, 64, 63), PackedInt32Array(60, 63, 62), PackedInt32Array(60, 62, 61), PackedInt32Array(62, 65, 61), PackedInt32Array(59, 58, 64), PackedInt32Array(60, 61, 50), PackedInt32Array(50, 61, 67), PackedInt32Array(50, 67, 49), PackedInt32Array(49, 67, 66), PackedInt32Array(67, 68, 66), PackedInt32Array(64, 34, 63), PackedInt32Array(63, 34, 69), PackedInt32Array(69, 34, 24), PackedInt32Array(69, 24, 70), PackedInt32Array(72, 71, 73), PackedInt32Array(73, 71, 74), PackedInt32Array(74, 71, 70), PackedInt32Array(76, 75, 70), PackedInt32Array(77, 75, 78), PackedInt32Array(78, 75, 76), PackedInt32Array(75, 79, 70), PackedInt32Array(81, 80, 82), PackedInt32Array(82, 80, 79), PackedInt32Array(79, 80, 70), PackedInt32Array(83, 76, 70), PackedInt32Array(85, 84, 83), PackedInt32Array(86, 69, 70), PackedInt32Array(71, 86, 70), PackedInt32Array(85, 83, 87), PackedInt32Array(87, 83, 70), PackedInt32Array(80, 74, 70), PackedInt32Array(89, 88, 90), PackedInt32Array(90, 88, 91), PackedInt32Array(90, 91, 92), PackedInt32Array(92, 91, 94), PackedInt32Array(92, 94, 93), PackedInt32Array(72, 73, 95), PackedInt32Array(95, 73, 94), PackedInt32Array(95, 94, 62), PackedInt32Array(62, 94, 91), PackedInt32Array(62, 91, 65), PackedInt32Array(88, 89, 96), PackedInt32Array(96, 89, 97), PackedInt32Array(97, 99, 98), PackedInt32Array(96, 97, 68), PackedInt32Array(68, 97, 66), PackedInt32Array(66, 97, 98), PackedInt32Array(92, 101, 100), PackedInt32Array(81, 82, 102), PackedInt32Array(101, 92, 103), PackedInt32Array(103, 92, 93), PackedInt32Array(103, 93, 81), PackedInt32Array(103, 81, 102), PackedInt32Array(105, 104, 106), PackedInt32Array(106, 104, 107), PackedInt32Array(110, 109, 108), PackedInt32Array(100, 101, 99), PackedInt32Array(99, 101, 111), PackedInt32Array(108, 112, 110), PackedInt32Array(110, 112, 98), PackedInt32Array(106, 107, 111), PackedInt32Array(111, 107, 99), PackedInt32Array(99, 107, 98), PackedInt32Array(98, 107, 110), PackedInt32Array(104, 105, 113), PackedInt32Array(113, 105, 114), PackedInt32Array(113, 114, 115), PackedInt32Array(115, 114, 117), PackedInt32Array(115, 117, 116), PackedInt32Array(77, 78, 118), PackedInt32Array(118, 78, 117), PackedInt32Array(118, 117, 102), PackedInt32Array(102, 117, 114), PackedInt32Array(102, 114, 103), PackedInt32Array(116, 84, 115), PackedInt32Array(115, 84, 109), PackedInt32Array(109, 84, 85), PackedInt32Array(109, 85, 108)]

[sub_resource type="PlaneMesh" id="PlaneMesh_51afu"]
size = Vector2(60, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k6nio"]
albedo_texture = ExtResource("3_t6m7v")
roughness_texture = ExtResource("5_ivgad")
normal_enabled = true
normal_texture = ExtResource("4_exg0k")
uv1_scale = Vector3(0.085, 0.085, 0.085)
uv1_offset = Vector3(-0.135, 0, 0)
uv1_triplanar = true
uv1_triplanar_sharpness = 51.9841
uv1_world_triplanar = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1yy8o"]
data = PackedVector3Array(30, 0, 30, -30, 0, 30, 30, 0, -30, -30, 0, 30, -30, 0, -30, 30, 0, -30)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_8egd3"]
panorama = ExtResource("7_72xuw")

[sub_resource type="Sky" id="Sky_alfe8"]
sky_material = SubResource("PanoramaSkyMaterial_8egd3")

[sub_resource type="Environment" id="Environment_1dh4r"]
background_mode = 2
sky = SubResource("Sky_alfe8")

[node name="CrowdAIScene" type="Node3D"]

[node name="map" type="Node" parent="."]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="map"]
navigation_mesh = SubResource("NavigationMesh_cv82n")

[node name="road_pack" type="Node" parent="map/NavigationRegion3D"]

[node name="Road_1X_Straight" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("6_alfe8")]
transform = Transform3D(0.004, 0, 0, 0, 0.004, 0, 0, 0, 0.004, 0, -0.004, 0)

[node name="Road_1X_Straight2" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("6_alfe8")]
transform = Transform3D(-1.74846e-10, 0, 0.004, 0, 0.004, 0, -0.004, 0, -1.74846e-10, 36.835, -0.004, -36.825)

[node name="Road_1X_Straight3" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("6_alfe8")]
transform = Transform3D(-0.004, 0, -3.49691e-10, 0, 0.004, 0, 3.49691e-10, 0, -0.004, 0.02, -0.004, -73.615)

[node name="Road_L_Intersection" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("7_1dh4r")]
transform = Transform3D(-1.74846e-10, 0, 0.004, 0, 0.004, 0, -0.004, 0, -1.74846e-10, 36.838, 0.049, 0)

[node name="Road_L_Intersection2" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("7_1dh4r")]
transform = Transform3D(-0.004, 0, -3.49691e-10, 0, 0.004, 0, 3.49691e-10, 0, -0.004, 36.838, 0.037, -73.619)

[node name="Road_1X_Straight4" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("6_alfe8")]
transform = Transform3D(-1.74846e-10, 0, -0.004, 0, 0.004, 0, 0.004, 0, -1.74846e-10, -36.786, -0.004, -36.8046)

[node name="Road_L_Intersection3" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("7_1dh4r")]
transform = Transform3D(-1.74846e-10, 0, -0.004, 0, 0.004, 0, 0.004, 0, -1.74846e-10, -36.786, 0.049, -73.6296)

[node name="Road_L_Intersection4" parent="map/NavigationRegion3D/road_pack" instance=ExtResource("7_1dh4r")]
transform = Transform3D(0.004, 0, 0, 0, 0.004, 0, 0, 0, 0.004, -36.786, 0.049, -0.0102234)

[node name="park_bench" type="Node" parent="map/NavigationRegion3D"]

[node name="Park Bench" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(-6.27258e-08, 0, -1.435, 0, 1.435, 0, 1.435, 0, -6.27258e-08, 5.254, 0.081, -16.417)

[node name="Park Bench2" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(1.88178e-07, 0, 1.435, 0, 1.435, 0, -1.435, 0, 1.88178e-07, -5.746, 0.081, -16.417)

[node name="Park Bench3" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(-6.27258e-08, 0, -1.435, 0, 1.435, 0, 1.435, 0, -6.27258e-08, 5.254, 0.081, -26.417)

[node name="Park Bench4" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(1.88178e-07, 0, 1.435, 0, 1.435, 0, -1.435, 0, 1.88178e-07, -5.746, 0.081, -26.417)

[node name="Park Bench5" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(-6.27258e-08, 0, -1.435, 0, 1.435, 0, 1.435, 0, -6.27258e-08, 5.254, 0.081, -46.417)

[node name="Park Bench6" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(1.88178e-07, 0, 1.435, 0, 1.435, 0, -1.435, 0, 1.88178e-07, -5.746, 0.081, -46.417)

[node name="Park Bench7" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(-6.27258e-08, 0, -1.435, 0, 1.435, 0, 1.435, 0, -6.27258e-08, 5.254, 0.081, -57.417)

[node name="Park Bench8" parent="map/NavigationRegion3D/park_bench" instance=ExtResource("3_exg0k")]
transform = Transform3D(1.88178e-07, 0, 1.435, 0, 1.435, 0, -1.435, 0, 1.88178e-07, -5.746, 0.081, -57.417)

[node name="idk" type="Node" parent="map/NavigationRegion3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.085, 1.142, -11.791)
size = Vector3(1, 3.28467, 1)

[node name="Lean2am" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D2" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.085, 1.142, -21.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D3" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.085, 1.142, -51.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D4" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.085, 1.142, -61.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D4"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D5" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.915, 1.142, -11.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D5"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D6" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.915, 1.142, -21.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D6"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D7" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.915, 1.142, -51.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D7"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="CSGBox3D8" type="CSGBox3D" parent="map/NavigationRegion3D/idk"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.915, 1.142, -61.791)
size = Vector3(1, 3.28467, 1)

[node name="PedSpawnerSlot" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06592, 0.929206)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/NavigationRegion3D/idk/CSGBox3D8"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.823558, -1.06592, -0.0707941)
script = ExtResource("7_alfe8")
ped_spawner_type = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="MeshInstance3D" type="MeshInstance3D" parent="map/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0760803, -36.7016)
mesh = SubResource("PlaneMesh_51afu")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_k6nio")

[node name="StaticBody3D" type="StaticBody3D" parent="map/NavigationRegion3D/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map/NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1yy8o")

[node name="FlowAIController" type="Node" parent="map"]
process_priority = 1
process_physics_priority = 1
process_thread_group = 1
process_thread_group_order = 0
process_thread_messages = 0
script = ExtResource("2_cv82n")
DataPath = "res://data/CrowdAIScenePathnodesData.json"
metadata/_custom_type_script = "uid://bysxpb73lr46b"

[node name="PedSpawnerController" type="Node" parent="map" node_paths=PackedStringArray("SpawnerSlotsPath", "SpawnerNpcPath", "FlowAIControllerNode", "PlayerRef")]
process_priority = 1
script = ExtResource("5_8egd3")
SpawnerSlotsPath = NodePath("Spawners")
SpawnerNpcPath = NodePath("../../actor")
FlowAIControllerNode = NodePath("../FlowAIController")
PlayerRef = NodePath("../../actor/actor_player")
NpcScene = ExtResource("2_1nv3g")
peds_pool_size = 60
despawn_radius = 105.0
metadata/_custom_type_script = "uid://mk0cs7tsd178"

[node name="Spawners" type="Node" parent="map/PedSpawnerController"]

[node name="PedSpawnerSlot" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -16)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 3
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot2" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, -10)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot3" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -24)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 3
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot4" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -11)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot5" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, -19)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 2
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot9" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, -45)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 5
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="PedSpawnerSlot10" type="Marker3D" parent="map/PedSpawnerController/Spawners"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, -53)
script = ExtResource("7_alfe8")
ped_spawner_type = 1
peds_size = 3
metadata/_custom_type_script = "uid://c8oqvjek0jr6i"

[node name="actor" type="Node" parent="."]

[node name="actor_player" parent="actor" instance=ExtResource("4_cv82n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)

[node name="RuntimeCreatedBodies" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("ped_spawner_controller")]
script = ExtResource("13_t6m7v")
ped_spawner_controller = NodePath("../map/PedSpawnerController")

[node name="Interface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Interface"]
layout_mode = 0
offset_left = 21.0
offset_top = 23.0
offset_right = 67.0
offset_bottom = 127.0

[node name="fps" type="Label" parent="CanvasLayer/Interface/VBoxContainer"]
layout_mode = 2
text = "NPCS:"

[node name="peds" type="Label" parent="CanvasLayer/Interface/VBoxContainer"]
layout_mode = 2
text = "NPCS:"

[node name="active_peds" type="Label" parent="CanvasLayer/Interface/VBoxContainer"]
layout_mode = 2
text = "NPCS:"

[node name="inactive_peds" type="Label" parent="CanvasLayer/Interface/VBoxContainer"]
layout_mode = 2
text = "NPCS:"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Interface"]
layout_mode = 0
offset_left = 21.0
offset_top = 143.0
offset_right = 67.0
offset_bottom = 247.0

[node name="spawn_radius" type="Label" parent="CanvasLayer/Interface/VBoxContainer2"]
layout_mode = 2
text = "NPCS:"

[node name="despawn_radius" type="Label" parent="CanvasLayer/Interface/VBoxContainer2"]
layout_mode = 2
text = "NPCS:"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1dh4r")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true
